2001-04-25  Federico Mena Quintero  <federico@ximian.com>

	* gtkdoc-scanobj.in: Added missing output-dir in the call to
	GetOptions().

2001-04-24  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scanobj.in: copied --outputdir option from gtkdoc-scangobj.in.

Fri Apr 13 15:25:44 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in: Restore call to OutputBook that was accidentally
	deleted.

Thu Apr 12 17:57:12 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scangobj.in: Add a --outputdir option (sort of hacky.
	Need this because $CC, $LD can include relative paths if they
	are based on $LIBTOOL)

2001-03-26  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (ReadSourceDocumentation): scan .h files as well,
	so macros can be documented there if desired.

	* gtkdoc-mkhtml.in (gtkdocdir): use 'test -f' rather than 'test -e'
	which is GNU-specific.

Thu Mar  8 17:26:29 2001  Tim Janik  <timj@gtk.org>

	* gtkdoc-scangobj.in: fix signal param type handling.

Tue Mar  6 23:21:46 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtkdoc-scanobj.in: Add gobject support.  Now works on files that
	don't link against GTK.

Sat Mar  3 17:43:42 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-{scan,mktmpl,mkdb}.in: Add support for G_CONST_RETURN.
	(Right now, it will appear as G_CONST_RETURN in the output -
	I'm not sure that's right - perhaps it should be converted
	to const.)

2001-02-20  Michael Meeks  <michael@ximian.com>

	* gtkdoc-mktmpl.in: s/TRUE/1/

2001-02-19  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mktmpl.in (UpdateTemplates): fixed bug handling the $changed
	flag.

2001-02-17  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scan.in (ScanHeaders): 
	(ScanHeader): patch from Johannes Stezenbach <js@convergence.de>
	so we don't use '\b' in the regexp to match files/dirs to ignore.
	'\b' can match '_' so we matched things we shouldn't have.

Mon Feb 12 12:50:57 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Up version.
