@@ -1,3 +1,14 @@
+2001-05-07  Joakim Ziegler  <joakim@ximian.com>
+
+  * gtkdoc-mkdb.in: Added option --outputallsymbols to create a symbol list
+    in the module doc dir.
+
+  * gtkdoc-mkdb.in: Added functionality to output a list of undocumented
+    symbols in a module, most of is is in OutputMissingDocumentation.
+
+  * gtkdoc-scan.in: Small scanning fixes to facilitate the doc coverage
+     output mentioned above.
+
 2001-04-25  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtkdoc-scanobj.in: Added missing output-dir in the call to
